[package]
name = "neat-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.x"
parking_lot = "0.x"
serde = { version = "1.x", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.x", features = ["serde"] }
log = "0.4.x"
pretty_env_logger = "0.x"
dotenvy = "0.x"
dotenvy_macro = "0.x"
neo4rs = { version = "0.x"}
futures = { version = "0.3.x"}
uuid = { version = "1.x" }

